[tool.poetry]
name = "netom"
version = "0.2.0"
description = "network object models"
authors = ["20C <code@20c.com>"]
readme = "README.md"
license = "Apache-2.0"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]

[tool.isort]
profile = "black"
multi_line_output = 3


[tool.poetry.scripts]
netom = "netom.cli:main"


[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^3"
tmpl = "^1"
confu = "^1.7.1"
munge = "^1.1.0"

[tool.poetry.dev-dependencies]
# testing
codecov = ">=2"
coverage = ">=5"
pytest = ">=6"
pytest-cov = "*"
pytest-filedata = "^0.4.0"
#tox = "^3.20.1"

# linting
bandit = ">=1.6.2"
black = ">=20"
isort = ">=5.7"
flake8 = ">=3.8"
mypy = ">=0.950"
pre-commit = ">=2.13"
pyupgrade = ">=2.19"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = "^1.2.3"

# ctl
ctl = ">=1"
jinja2 = ">=2"
tmpl = ">=1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
